<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/AppTheme"
    tools:context=".PreorderMain">

    <RelativeLayout
        android:id="@+id/preorder_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- APPBAR-->
        <android.support.design.widget.NavigationView
            android:layout_width="match_parent"
            android:layout_height="56sp"
            android:layout_alignParentTop="true"
            android:background="@color/fqTheme"
            app:menu="@menu/menu" />

        <!--INNER CONTENT-->
        <LinearLayout
            android:id="@+id/page_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="56dp">

            <!--PAGE TITLE-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/page_title"
                android:gravity="left|center"
                android:paddingLeft="28dp"
                android:text="Preorder"
                android:textColor="@color/fqBackgroundWhite"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/preorder_count_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@android:drawable/btn_dropdown"
                android:hint="@string/numOfPreorders"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/preorder_deadline_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@android:drawable/btn_dropdown"
                android:hint="@string/deadlineOfPreorders"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/preorder_button"
                android:layout_width="@dimen/ok_button_width"
                android:layout_height="@dimen/ok_button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@color/fqTheme"
                android:text="Go!"
                android:textColor="@color/fqBackgroundWhite"
                android:textSize="30sp" />
        </LinearLayout>

        <!--NAVIGATION BAR-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/fqTheme"
            android:orientation="horizontal">

            <Button
                android:id="@+id/queuePage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/source_code_pro"
                android:onClick="gotoQueue"
                android:text="Queue" />

            <Button
                android:id="@+id/preorderPage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/source_code_pro"
                android:onClick="gotoPreorder"
                android:text="Preorder"
                android:textColor="@color/CurrentTab" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/preorder_inprogress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/fqTheme"
        style="@style/AppTheme"
        tools:context=".PreorderMain">

        <!--PREORDER-IN-PROGRESS-->
        <LinearLayout
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="15dp"
            android:layout_marginTop="30dp"
            android:background="@color/fqBackgroundWhite">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number_of_preorders"
                android:textColor="@color/fqTheme"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/preorder_ordercount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:layout_weight="3"
                android:textColor="@color/fqTheme"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_left"
                android:textColor="@color/fqTheme"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/preorder_timeleft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0 mins"
                android:layout_weight="3"
                android:textColor="@color/fqTheme"
                android:textSize="50sp" />

            <Button
                android:id="@+id/preorder_stop_button"
                android:layout_width="@dimen/ok_button_width"
                android:layout_height="@dimen/ok_button_height"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/stop_preorder"
                android:textSize="20sp"
                android:textColor="@color/fqBackgroundWhite"
                android:background="@color/fqTheme"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/preorder_timereached"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/fqTheme"
        style="@style/AppTheme"
        tools:context=".PreorderMain">

        <!--PREORDER-TIME-REACHED-->
        <LinearLayout
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="15dp"
            android:layout_marginTop="30dp"
            android:background="@color/fqBackgroundWhite">

            <Button
                android:id="@+id/preorder_closeButton_timereached"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/close_button"
                android:layout_gravity="right"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="60dp"
                android:gravity="center"
                android:text="@string/preorder_time_is_up"
                android:textColor="@color/fqTheme"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal|top"
                android:text="@string/you_can_continue_preparations"
                android:textColor="@color/fqTheme"
                android:textSize="15sp"
                android:textStyle="normal"
                />



        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/preorder_countreached"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/fqTheme"
        style="@style/AppTheme"
        tools:context=".PreorderMain">

        <!--PREORDER-COUNT-REACHED-->
        <LinearLayout
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="15dp"
            android:layout_marginTop="30dp"
            android:background="@color/fqBackgroundWhite">

            <Button
                android:id="@+id/preorder_closeButton_countreached"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/close_button"
                android:layout_gravity="right"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="60dp"
                android:gravity="center"
                android:text="@string/preorder_number_is_reached"
                android:textColor="@color/fqTheme"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal|top"
                android:text="@string/you_can_continue_preparations"
                android:textColor="@color/fqTheme"
                android:textSize="15sp"
                android:textStyle="normal"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>